# megalodon-enwik8

./: .gitignore  README.md  RESULTS.md  inference.py  pyproject.toml  train.py
configs/: llama_512.yaml  mega_multichunk_512.yaml  mega_multichunk_512_short.yaml  mega_nano.yaml  mega_nano_short.yaml  mega_small.yaml  nano.yaml  simple.yaml  test.yaml
configs/archive/: mega_multichunk_512_short.yaml  mega_nano.yaml  megalodon_multichunk_512_short.yaml  megalodon_nano.yaml  megalodon_nano_short.yaml  megalodon_small.yaml  nano.yaml  nano_short.yaml
decoder_pytorch/: __init__.py  llama.py  megalodon.py  utils.py
megalodon_enwik8/: __init__.py  megalodon.py
