[project]
name = "decoder-pytorch-template"
dynamic = ["version"]
description = "A template for autoregressive language model experimentation"
authors = [
    { name = "Peter Szemraj", email = "peterszemraj+dev@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformer',
    'attention mechanism',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "einops>=0.8.0",
    "rotary_embedding_torch",
    "torch>=2.9.0",
    "pyyaml>=6.0",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/pszemraj/decoder-pytorch-template"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm[toml] >= 8.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.setuptools.packages.find]
include = ["decoder_pytorch*"]

[tool.setuptools_scm]
write_to = "decoder_pytorch/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"
