[project]
name = "megalodon-enwik8"
dynamic = ["version"]
description = "Minimal example showing MEGALODON beats Transformers on character modeling"
authors = [{ name = "Peter Szemraj", email = "peterszemraj+dev@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'megalodon',
    'linear-attention',
    'character-level',
    'enwik8',
    'transformer',
    'language-model',
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "megalodon-hf @ git+https://github.com/pszemraj/megalodon-hf.git",
    "einops>=0.8.0",
    "rotary_embedding_torch",
    "torch>=2.9.0",
    "pyyaml>=6.0",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/pszemraj/megalodon-enwik8"

[project.optional-dependencies]
examples = []
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm[toml] >= 8.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.setuptools.packages.find]
include = ["megalodon_enwik8*"]

[tool.setuptools_scm]
write_to = "megalodon_enwik8/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"
